infra/k8s/base/webapp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: webapp
          image: rg.fr-par.scw.cloud/legipilot-production/legipilot-webapp:1.0.4
          ports:
            - containerPort: 3000
