infra/k8s/base/webapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
spec:
  selector:
    app: webapp
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
